--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
     </nav>
-    <!--intro-->
+    <!----intro---->
     <div class="bg-beige h-11/12 m-0 w-full flex justify-flexend gap-16">
         <span class="flex-col w-5/12 pt-10 gap-18">
             <span>
@@ -51,7 +51,7 @@
             <div onclick="Right();"> <img src="Right.svg"></div>
         </div>
     </div>
-    <!--oferta-->
+    <!----oferta---->
     <div class="bg-grey pb-40 pt-30 gap-24 align-item-center flex-col">
         <span class="gap-4 flex-col w-3/5 align-item-center flexstart">
             <p class="text-green-800 fs-12 font-inter">Oferta</p>
@@ -94,7 +94,7 @@
             </span>
         </span>
     </div>
-    <!--O firmie-->
+    <!----O firmie---->
     <div class="flex align-item-center gap-16 bg-green-800 text-grey">
         <img width="150%" height="720px" class="bgOFirmie"/>
         <span class="flex-col align-item-start gap-18">
@@ -108,7 +108,7 @@
             <button class="text-grey fs-16 bg-green-800 border-solid border border-grey border-radius-200 px-5.5 pb-3.5 pt-3 button04 flexstart flex gap-2 w-48">Poznaj nas bliżej<img width="16px" height="16px" src="GreyVector.svg"/></button>
         </span>
     </div>
-    <!--Realizacje-->
+    <!----Realizacje---->
     <div class="flex-col flexstart pt-30 pb-11 bg-beige gap-24" id="realizacje">
         <span class="gap-4 pl-40">
             <p class="m-0 fs-12 font-inter text-green-800">Realizacje</p>
@@ -130,7 +130,7 @@
             </div>
         </span>
     </div>
-    <!--Instagram-->
+    <!----Instagram---->
     <div class="bg-grey flex-col align-item-center py-15">
         <span class="text-grey gap-16 py-30 px-28 bg-green-800 flex-row flex">
             <h1 class="font-mono font-normal fs-40 ">Zostańmy w kontakcie! <br/>Znajdziesz nas na <i class="font-medium">Instagramie.</i></h1>
@@ -140,7 +140,7 @@
             </span>
         </span>
     </div>
-    <!--Stopka-->
+    <!----Stopka---->
     <footer class="flex-col gap-30 py-20 px-64 bg-black text-grey">
         <span class="flex-col gap-15">
             <span class="justify flex-row flex">
